--- a/jabs.cfg
+++ b/jabs.cfg
@@ -1,5 +1,5 @@
 #
-#- jabs.cfg Version 0.99C.001
+#- jabs.cfg Version 0.99C.002
 #  --------------------------
 #
 #
@@ -36,7 +36,7 @@ CTYPE=lan
 # values accepted are:
 #  push|Push|PULL
 #  pull|Pull|PULL
-FLOW=pull
+FLOW=push
 
 # ARCHIVING=:
 # -----------
