--- a/jabs.cfg
+++ b/jabs.cfg
@@ -1,5 +1,5 @@
 #
-#- jabs.cfg Version 0.99C.002
+#- jabs.cfg Version 0.99d.000
 #  --------------------------
 #
 #
@@ -13,10 +13,9 @@
 #
 # REMOTE=:
 # --------
-# y|Y|1 means target or source device resides on a remote server. If n|N|o| or is empty
-# then 'FLOW=' and 'CTYPE=' will be ignored
-# Default is 'y'
-REMOTE=y
+# y|Y|1 means target or source device resides on a remote server. If n|N|0
+# then 'FLOW=' and 'CTYPE=' will be ignored. Default is "Y"
+REMOTE=
 
 # CTYPE=:
 # -------
@@ -42,12 +41,12 @@ FLOW=push
 # -----------
 # Archiving incrementals instead of delete it. tar with -Pcf option is used
 # y|Y|1 means arching is on. Default is on
-ARCHIVING=y
+ARCHIVING=1
 
 # LOGGING=
 # --------
 # n|N|0 logging is off. If set to 1, then logfile in $LOGDIR is used
-# Default is on (y|Y|1)
+# Default is on
 LOGGING=y
 
 # OUTP=:
@@ -75,49 +74,43 @@ OUTP=0
 # Example 2 - Use date in the filename and the hostname in the path:
 # i.e 'LOGNAME=/test/log/$(hostname)/bkup.$(date +\%Y-\%m-\%d_\%H-\%M)' will result in
 #     '/test/log/yourhostname/bkup.2017-01-23_12_02'
-LOGNAME=/YourLogDirectory/$(hostname)_bkup.$(date +\%Y-\%m-\%d_\%H-\%M).log
+LOGNAME=/var/log/sync/$(hostname)_bkup.$(date +\%Y-\%m-\%d_\%H-\%M).log
 
 # TIMEOUT=:
 # ---------
 # Max time out in seconds to wait for device
 # i.e a value of 900 means 15 minutes
-# Default is 0
 TIMEOUT=240
 
 # DELAY=:
 # -------
 # Time in seconds to wait until backup server is ready for connection
-# Default is 0
 DELAY=60
 
 # WOL=:
 # -----
 # if set > 0 then wakeonlan remote server
-# Default is off
-WOL=n
+WOL=1
 
 # SSH=:
 # -----
 # y|Y|1 then use ssh as remote shell
-# Default is on
 SSH=y
 
 # POFF=:
 # ------
 # y|Y|1 then poweroff is neccessary after processing jabs
-#Default is off
-POFF=n
+#Default is 'n'
+POFF=y
 
 # TRESHOLD=:
 # ----------
 # % regular treshold. if reached then space calculation on target is necessary
-# Default is 0
 TRESHOLD=10
 
 # PTRESHOLD=:
 # -----------
 # % panic treshold. If reached then exit backup
-# Default is 0
 PTRESHOLD=5
 
 #._RSYNC_CONTROL:
@@ -134,13 +127,13 @@ INCREMENTAL=y
 # ORIGIN=:
 # --------
 # source backup directory
-ORIGIN=/YourSource
+ORIGIN=/yoursourcedirectory
 
 # TARGET=:
 # --------
 # target backup directory
 # The same command rules can be applied here as described in 'LOGNAME='
-TARGET=/YourTarget/bkup_$(hostname)
+TARGET=/yourtargetdirectory/bkup_$(hostname)
 
 # INCREMENTDIRPOSTF=:
 # -------------------
@@ -156,7 +149,7 @@ INCREMENTNAME=bkup.$(date +\%Y-\%m-\%d_\%H-\%M)
 # EXCLUDE=:
 # ---------
 # Provides the exclude file name
-EXCLUDE=/YourRunDirectory/jabs.exclude
+EXCLUDE=/yourdirectory/jabs.exclude
 
 # DELETE:
 # --------
@@ -169,6 +162,12 @@ DELETE=y
 # y|Y|1 then the --delete-exluded rsync option will be used
 # Default is 'y'
 EDELETE=y
+
+# COMPRESSION=:
+# -------------
+# Set rsync compression level or switch off rsync compression
+# 0 is off, 1 is lowest and 6 is highest compression
+COMPRESSION=
 
 #._ARCHIVE_CONTROL:
 #
@@ -205,23 +204,28 @@ WOLPORT=9
 # WOLADR=:
 # --------
 # if wol > 0 then a mac address of remote device is neccessary
-WOLADR=00:11:32:27:0A:17
+WOLADR=00:00:00:00:00:00
+
+# CIPHER=:
+# --------
+# ssh encryption method could be set to one of the following:
+#   [chacha20-poly1305|aes256-gcm|aes128-gcm|aes128-ctr|aes192-ctr|aes256-ctr|arcfour|arcfour256|arcfour128|aes128-cbc|3des-cbc|blowfish|none]
+CIPHER=arcfour
 
 # SSHPORT=:
 # ---------
 # Set the ssh port
-# Default is 22
-SSHPORT=22
+SSHPORT=
 
 # RHOSTNAME=:
 # -----------
 # Hostname or ip address of the remote device
-RHOSTNAME=remotehostname
+RHOSTNAME=yourhostname
 
 # RLOGINNAME=:
 # -----------
 # Login on remote device
-RLOGINNAME=username
+RLOGINNAME=yourusername
 
 # DOMAINIP=:
 # ----------
